--- a/jobboard/templates/jobboard/board.html
+++ b/jobboard/templates/jobboard/board.html
@@ -8,13 +8,19 @@
 </head>
 <body>
 <h1>Job searching platform for students</h1>
-{% for message in messages %}
+<div class="newfrm">
+    <p class="newmsg">New Job:</p>
+    <form method="POST">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <input type="submit" value="Post">
+    </form>
+</div>
 <div class="message">
     <p class="author">
         Posted by {{message.author}} at {{message.date}}
     </p>
     <p>{{ message.text }}</p>
 </div>
-{% endfor %}
 <p class="EOM">(End of messages)</p>
 </body>
