--- a/templates/register.html
+++ b/templates/register.html
@@ -1,6 +1,7 @@
 <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!------ Include the above in your HEAD tag ---------->
 
 
 <!DOCTYPE html>
@@ -21,18 +22,21 @@ body{
   background-repeat: no-repeat;
   background-size: cover;
 }
+
 </style>
+
+
 
 </head>
 <body>
 
-
+<!-- if you want to create login page and register page together in one page ...you have to only chnage his name...that's it...                 -->
 <div class="container" style="margin-top: 5%;">
   <div class="row">
     <div class="col-sm-4"> </div>
 <div class="col-md-4">
 
-<h1 class="text-center text-success"> Login page</h1>
+<h1 class="text-center text-success"> Register </h1>
 <br/>
 
 <div class="col-sm-12">
@@ -58,7 +62,7 @@ body{
 <form action="#">
 
   <div class="form-group">
-    <label for="UserName">Recruiter name</label>
+    <label for="UserName">Full Name</label>
     <input type="text" class="form-control" id="email">
   </div>
 
@@ -66,6 +70,12 @@ body{
     <label for="email">Email address:</label>
     <input type="email" class="form-control" id="email">
   </div>
+
+      <div class="form-group">
+    <label for="role">Role:</label>
+    <input type="role" class="form-control" id="role">
+  </div>
+
 
   <div class="form-group">
     <label for="pwd">Password:</label>
@@ -80,12 +90,10 @@ body{
 
 
   <button type="submit" class="btn btn-default btn-lg">Submit</button>
-  <button type="submit" class=" pull-right btn-link"><a href="www.google.com">Forget password</a></button>
+
 
 </form>
 <br/>
-<a href="{% url 'register' %}" class="pull-right btn btn-block btn-danger" > Already Register ?   </a>
-
 
 
     </div>
@@ -95,7 +103,7 @@ body{
 <form action="#">
 
   <div class="form-group">
-    <label for="UserName">Student Name</label>
+    <label for="UserName">Full Name</label>
     <input type="text" class="form-control" id="email">
   </div>
 
@@ -103,6 +111,12 @@ body{
     <label for="email">Email address:</label>
     <input type="email" class="form-control" id="email">
   </div>
+
+    <div class="form-group">
+    <label for="role">Role:</label>
+    <input type="role" class="form-control" id="role">
+  </div>
+
 
   <div class="form-group">
     <label for="pwd">Password:</label>
@@ -118,11 +132,11 @@ body{
 
   <button type="submit" class="btn btn-default">Submit</button>
 
-  <button type="submit" class=" pull-right btn-link"><a href="www.google.com">Forget password</a></button>
-
 </form>
 <br/>
-<a href="#" class="pull-right btn btn-block btn-success" > Already Register ?   </a>
+
+
+
 
 
 
@@ -132,5 +146,6 @@ body{
 </div>
 </div>
 </div>
+<!-- This design is created by manoj chauhan  -->
 </body>
 </html>
