Add basic naivgation bar

--- a/templates/home.html
+++ b/templates/home.html
@@ -20,6 +20,14 @@ body{
     </style>
 </head>
 <body>
+    <nav class="navbar navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="/docs/5.1/assets/brand/bootstrap-logo.svg" alt="" width="30" height="24" class="d-inline-block align-text-top">
+            Bootstrap
+          </a>
+        </div>
+      </nav>
 <div class="container" style="margin-top: 5%;">
     <div class="row">
         <div class="col-sm-4"></div>
