--- a/templates/base.html
+++ b/templates/base.html
@@ -37,8 +37,8 @@
                 <a class="nav-link" href="#">Profile</a>
               </li>
               {% endif %}
-              <form class="d-flex">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+              <form class="d-flex" action="{% url 'jobs_search' %}" method="get">
+                <input name="search_query" class="form-control me-2" type="search" placeholder="Search" aria-label="Search...">
                 <button class="btn btn-outline-success" type="submit">Search</button>
               </form>
               <li class="nav-item">
